# lstm_vs_transformer

./: .gitignore  README.md  pyproject.toml
configs/: am_config.py  pn_config.py  tsp_config.py
configs/hydra/: base.yaml  train_am_mis_rl.yaml  train_am_mis_supervised.yaml  train_am_tsp_rl.yaml  train_am_tsp_supervised.yaml  train_pn_mis_rl.yaml  train_pn_mis_supervised.yaml  train_pn_tsp_rl.yaml  train_pn_tsp_supervised.yaml
data/mis/: mis100_p015_smoke_test.jsonl
src/data/: common.py  dataset.py  generate_data.py  generate_tsp_data.py  registry.py  state.py
src/data/MIS/: README.md  algorithms.py  dataset.py  generate.py
src/data/TSP/: README.md  algorithms.py  dataset.py  generate.py
src/data/generation/: runner.py  tsp_solver.py
src/data/generation/types/: __init__.py  base.py  dataset.py
src/data_generating/: README.md
src/data_generating/MIS/: README.md  algorithms.py  dataset.py  generate.py
src/data_generating/TSP/: README.md  algorithms.py  dataset.py  generate.py
src/main/: train_am_mis_rl.py  train_am_mis_supervised.py  train_am_tsp_rl.py  train_am_tsp_supervised.py  train_common.py  train_pn_mis_rl.py  train_pn_mis_supervised.py  train_pn_tsp_rl.py  train_pn_tsp_supervised.py
src/models/pointer_network/: attention.py  decoder.py  encoder.py  model.py  types.py
src/models/transformer/: attention_layer.py  layers.py  model.py
src/models/transformer/baselines/: baseline.py
src/training/: trainer.py  utils.py
