[project]
name = "lstm-vs-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=13.0.2",
    "hydra-core>=1.3.2",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
tsp-solver = [
    "pyconcorde @ git+https://github.com/jvkersch/pyconcorde",
    "lkh",
    "tsplib95",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
